--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/predict.py": {
-        "runtime": "python3.12"
+        "runtime": "vercel-python@3.12"
       }
     },
     "rewrites": [
