--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,4 @@
 {
-    "functions": {
-      "api/predict.py": {
-        "runtime": "vercel-python@3.12"
-      }
-    },
-    "rewrites": [
-      {
-        "source": "/api/predict",
-        "destination": "/api/predict.py"
-      }
-    ]
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
+}
